// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal ContentDefault story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Default story renders snapshot 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-:r7:"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  data-open=""
  id="headlessui-dialog-:r0:"
  role="dialog"
  style=""
  tabindex="-1"
>
  <div
    class="modal__overlay modal__overlay--emphasis-low"
  />
  <div
    class="modal__panel"
    data-headlessui-state="open"
    data-open=""
    id="headlessui-dialog-panel-:r6:"
  >
    <div
      class="modal__content modal__content--height-fixed modal__content--lg"
    >
      <button
        aria-label="close"
        class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="24px"
            style="--icon-size: 24px;"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
            />
          </svg>
        </span>
      </button>
      <div
        class="modal-header"
      >
        <h2
          class="heading heading--headline-md modal-title"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-title-:r7:"
        >
          Modal title
        </h2>
        <div
          class="text text--headline-sm modal-sub-title"
        >
          Modal title
        </div>
      </div>
      <div
        class="modal-body"
      >
        <div
          class="fpo h-full w-full"
        >
          Modal Content
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="button-group button-group--horizontal"
        >
          <button
            class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Primary
            </span>
          </button>
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Secondary
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Full story renders snapshot 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-:rf:"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  data-open=""
  id="headlessui-dialog-:r8:"
  role="dialog"
  style=""
  tabindex="-1"
>
  <div
    class="modal__overlay modal__overlay--emphasis-low"
  />
  <div
    class="modal__panel"
    data-headlessui-state="open"
    data-open=""
    id="headlessui-dialog-panel-:re:"
  >
    <div
      class="modal__content modal__content--height-fixed modal__content--full"
    >
      <button
        aria-label="close"
        class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="24px"
            style="--icon-size: 24px;"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
            />
          </svg>
        </span>
      </button>
      <div
        class="modal-header"
      >
        <h2
          class="heading heading--headline-md modal-title"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-title-:rf:"
        >
          Modal title
        </h2>
        <div
          class="text text--headline-sm modal-sub-title"
        >
          Modal title
        </div>
      </div>
      <div
        class="modal-body"
      >
        <div
          class="fpo h-full w-full"
        >
          Modal Content
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="button-group button-group--horizontal"
        >
          <button
            class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Primary
            </span>
          </button>
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Secondary
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal HighEmphasis story renders snapshot 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-:rn:"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  data-open=""
  id="headlessui-dialog-:rg:"
  role="dialog"
  style=""
  tabindex="-1"
>
  <div
    class="modal__overlay modal__overlay--emphasis-high"
  />
  <div
    class="modal__panel"
    data-headlessui-state="open"
    data-open=""
    id="headlessui-dialog-panel-:rm:"
  >
    <div
      class="modal__content modal__content--height-fixed modal__content--lg"
    >
      <button
        aria-label="close"
        class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="24px"
            style="--icon-size: 24px;"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
            />
          </svg>
        </span>
      </button>
      <div
        class="modal-header"
      >
        <h2
          class="heading heading--headline-md modal-title"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-title-:rn:"
        >
          Modal title
        </h2>
        <div
          class="text text--headline-sm modal-sub-title"
        >
          Modal title
        </div>
      </div>
      <div
        class="modal-body"
      >
        <div
          class="fpo h-full w-full"
        >
          Modal Content
        </div>
      </div>
      <div
        class="modal-footer"
      >
        <div
          class="button-group button-group--horizontal"
        >
          <button
            class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Primary
            </span>
          </button>
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Secondary
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Large story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal LargeAuto story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-auto modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal LargeMax story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-max modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal LayoutVertical story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--vertical"
    >
      <button
        class="button button--layout-none button--full-width button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--full-width button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal LayoutVerticalWithTertiary story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--vertical"
    >
      <button
        class="button button--layout-none button--full-width button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--full-width button--tertiary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Tertiary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Mobile story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal MobileLandscape story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Small story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--sm"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Tablet story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Primary
        </span>
      </button>
      <button
        class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Secondary
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal WithCriticalButton story renders snapshot 1`] = `
<div
  class="modal__content modal__content--height-fixed modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    aria-label="close"
    class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
        />
      </svg>
    </span>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--headline-md text-utility-default-primary"
    >
      Modal Title
    </h2>
    <div
      class="text text--headline-sm modal-sub-title"
    >
      Modal Sub-title
    </div>
  </div>
  <div
    class="modal-body"
  >
    <div
      class="fpo h-full w-full"
    >
      Modal Content
    </div>
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--horizontal"
    >
      <button
        class="button button--layout-none button--primary button--lg button--size-lg button--variant-critical"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          Critical Action
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal WithLongTextScrollable story renders snapshot 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-:rv:"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  data-open=""
  id="headlessui-dialog-:ro:"
  role="dialog"
  style=""
  tabindex="-1"
>
  <div
    class="modal__overlay modal__overlay--emphasis-low"
  />
  <div
    class="modal__panel"
    data-headlessui-state="open"
    data-open=""
    id="headlessui-dialog-panel-:ru:"
  >
    <div
      class="modal__content modal__content--height-fixed modal__content--scrollable modal__content--lg"
    >
      <button
        aria-label="close"
        class="button button--context-default button--layout-icon-only button--tertiary button--lg button--size-lg button--variant-neutral modal__close-button"
        type="button"
      >
        <span
          class="text text--label-lg button__text"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="24px"
            style="--icon-size: 24px;"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
            />
          </svg>
        </span>
      </button>
      <div
        class="modal-header"
      >
        <h2
          class="heading heading--headline-md modal-title"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-title-:rv:"
        >
          Modal Title
        </h2>
        <div
          class="text text--headline-sm modal-sub-title"
        >
          Modal Sub-title
        </div>
      </div>
      <div
        class="modal-body"
        tabindex="0"
      >
        <h3
          class="heading heading--headline-sm"
        >
          Title text
        </h3>
        <p
          class="text text--body-lg"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquam diam quis dolor maximus, non tincidunt lacus facilisis. Praesent ac vestibulum diam. Sed ac orci fringilla, ullamcorper quam nec, elementum turpis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur et vulputate leo. Phasellus convallis ante at augue iaculis, quis consectetur dolor placerat. Nulla ornare malesuada elit eu faucibus. Mauris ultricies tincidunt eleifend. Aliquam erat volutpat. Morbi nec ipsum sed sem facilisis tristique nec et ligula. Vivamus id feugiat sapien.
        </p>
        <h3
          class="heading heading--headline-sm"
        >
          Title text
        </h3>
        <p
          class="text text--body-lg"
        >
          Nam ac tincidunt arcu. Nam non metus sem. Morbi eleifend metus vel venenatis accumsan. Vestibulum pharetra, ante quis sollicitudin aliquam, orci ex pretium ipsum, congue rhoncus dui orci sed velit. Cras ac leo vel massa rutrum auctor eget sed orci. Aenean id nisi consectetur, dapibus tellus ut, finibus metus. Integer tristique est vitae lectus suscipit, ut vulputate est fringilla. Donec pharetra facilisis erat at venenatis. Etiam faucibus dignissim leo eget congue. Sed vehicula imperdiet neque id gravida. Proin volutpat tortor quis quam molestie, faucibus condimentum ante sagittis. Suspendisse sit amet luctus tellus. Suspendisse a sapien hendrerit eros dictum faucibus. Vivamus pretium vel sem faucibus tristique. Integer iaculis pellentesque nunc ac pellentesque.
        </p>
        <h3
          class="heading heading--headline-sm"
        >
          Title text
        </h3>
        <p
          class="text text--body-lg"
        >
          Integer mollis, urna eget sollicitudin laoreet, nunc elit facilisis urna, ut finibus est mi eu quam. Nam ac venenatis massa. Vestibulum suscipit ac ligula venenatis scelerisque. Fusce rutrum nulla lectus, sed dignissim ipsum faucibus sodales. Suspendisse id aliquet quam. Maecenas facilisis mauris dolor, id accumsan ex vehicula in. In nisl ligula, fringilla in enim nec, lobortis sollicitudin purus. Aliquam vehicula euismod enim quis finibus. Fusce ornare tortor malesuada, consequat magna quis, porta dolor. Donec quis nisl ac sem dictum semper quis vel turpis. Proin sed leo in ante rhoncus pellentesque a eu urna. Phasellus consequat lectus et hendrerit luctus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <h3
          class="heading heading--headline-sm"
        >
          Title text
        </h3>
        <p
          class="text text--body-lg"
        >
          Suspendisse vitae eros elit. Maecenas id urna tempus, tempus turpis id, blandit turpis. Fusce augue quam, pellentesque et suscipit consectetur, pharetra in mi. Suspendisse non ultricies purus. Integer dignissim condimentum sem ac porta. Vivamus viverra congue massa, vitae fermentum est scelerisque et. Duis a urna vitae odio semper dictum a sed nisl. In fringilla hendrerit massa, at luctus arcu tincidunt nec. Donec gravida, mauris sit amet porta lobortis, justo sem vehicula ipsum, at pretium sem leo sed libero. Morbi tristique rhoncus suscipit. Nullam at malesuada sapien. Nam in egestas tellus. Nulla quis metus dui. Suspendisse sit amet nisi at lectus ultricies egestas.
        </p>
        <h3
          class="heading heading--headline-sm"
        >
          Title text
        </h3>
        <p
          class="text text--body-lg mb-0"
        >
          Integer pulvinar felis sit amet dignissim fermentum. Nulla sodales enim mi, varius feugiat sapien congue eget. Morbi vitae ipsum non ligula eleifend molestie. Aenean bibendum tortor sapien, quis volutpat ante ultricies id. Morbi varius dolor ac ante posuere, sit amet tincidunt lectus pulvinar. Proin id efficitur neque. Nullam vel feugiat dui. Curabitur imperdiet lacinia eros, ac iaculis odio. Praesent quis pretium sapien, quis posuere lectus. Proin eleifend purus nec massa aliquam commodo. Quisque auctor suscipit ex sed tristique. Sed eget ultrices est. Suspendisse nunc justo, dapibus at eros ac, rutrum vestibulum est.
        </p>
      </div>
      <div
        class="modal-footer modal-footer--sticky"
      >
        <div
          class="button-group button-group--horizontal"
        >
          <button
            class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Primary
            </span>
          </button>
          <button
            class="button button--layout-none button--secondary button--lg button--size-lg button--variant-default"
            type="button"
          >
            <span
              class="text text--label-lg button__text"
            >
              Secondary
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
